--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -105,6 +105,11 @@ android {
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
+    applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "Weatherz.apk"
+        }
+    }
 }
 
 dependencies {
